--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
            <a href="#">contact us</a>
         </div>
     </div>
+    <div class="container">
+        <div class="box"></div>
+    </div>
 </body>
 </html>
