--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </div>
     <div class="container">
         <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </div>
 </body>
 </html>
